# sonix-aud02-esp-idf

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml  sonix_audo02.c
include/: sonix_audo02.h
